--- a/index.html
+++ b/index.html
@@ -549,37 +549,37 @@
   <div class="franchise-packages">
     <div class="package">
       <h3 data-i18n="franchise.package1.name">สตาร์ทเตอร์</h3>
-      <div class="price" data-i18n="franchise.package1.price">1.2 ล้านบาท</div>
+      <div class="price" data-i18n="franchise.package1.price">39,000 บาท</div>
       <ul>
-        <li data-i18n="franchise.package1.item1">สิทธิ์ในการใช้แบรนด์ 3 ปี</li>
+        <li data-i18n="franchise.package1.item1">สิทธิ์ในการใช้แบรนด์ 2 ปี</li>
         <li data-i18n="franchise.package1.item2">คู่มือการดำเนินงานครบถ้วน</li>
-        <li data-i18n="franchise.package1.item3">การฝึกอบรมทีมงาน 2 สัปดาห์</li>
-        <li data-i18n="franchise.package1.item4">การสนับสนุนด้านการตลาด 3 เดือน</li>
+        <li data-i18n="franchise.package1.item3">การฝึกอบรมทีมงาน 3 วัน</li>
+        <li data-i18n="franchise.package1.item4">การสนับสนุนด้านการตลาด 2 เดือน</li>
       </ul>
     </div>
     
     <div class="package">
       <h3 data-i18n="franchise.package2.name">มาตรฐาน</h3>
-      <div class="price" data-i18n="franchise.package2.price">2.5 ล้านบาท</div>
+      <div class="price" data-i18n="franchise.package2.price">69,000 บาท</div>
       <ul>
-        <li data-i18n="franchise.package2.item1">สิทธิ์ในการใช้แบรนด์ 5 ปี</li>
+        <li data-i18n="franchise.package2.item1">สิทธิ์ในการใช้แบรนด์ 3 ปี</li>
         <li data-i18n="franchise.package2.item2">การออกแบบร้านและควบคุมการก่อสร้าง</li>
-        <li data-i18n="franchise.package2.item3">การฝึกอบรมทีมงาน 1 เดือน</li>
-        <li data-i18n="franchise.package2.item4">การสนับสนุนด้านการตลาด 6 เดือน</li>
+        <li data-i18n="franchise.package2.item3">การฝึกอบรมทีมงาน 1 สัปดาห์ </li>
+        <li data-i18n="franchise.package2.item4">การสนับสนุนด้านการตลาด 4 เดือน</li>
         <li data-i18n="franchise.package2.item5">ระบบซอฟต์แวร์จัดการร้าน</li>
       </ul>
     </div>
     
     <div class="package">
       <h3 data-i18n="franchise.package3.name">พรีเมียม</h3>
-      <div class="price" data-i18n="franchise.package3.price">4 ล้านบาท</div>
+      <div class="price" data-i18n="franchise.package3.price"> 89,000 บาท</div>
       <ul>
-        <li data-i18n="franchise.package3.item1">สิทธิ์ในการใช้แบรนด์ 7 ปี</li>
+        <li data-i18n="franchise.package3.item1">สิทธิ์ในการใช้แบรนด์ 5 ปี</li>
         <li data-i18n="franchise.package3.item2">การออกแบบร้านพรีเมียมและควบคุมการก่อสร้าง</li>
-        <li data-i18n="franchise.package3.item3">การฝึกอบรมทีมงาน 2 เดือน</li>
+        <li data-i18n="franchise.package3.item3">การฝึกอบรมทีมงาน 2 สัปดาห์</li>
         <li data-i18n="franchise.package3.item4">การสนับสนุนด้านการตลาด 1 ปี</li>
         <li data-i18n="franchise.package3.item5">ระบบซอฟต์แวร์จัดการร้านขั้นสูง</li>
-        <li data-i18n="franchise.package3.item6">ที่ปรึกษาด้านการดำเนินธุรกิจ 1 ปี</li>
+        <li data-i18n="franchise.package3.item6">ที่ปรึกษาด้านการดำเนินธุรกิจ 3 เดือน</li>
       </ul>
     </div>
   </div>
