--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
         <li data-i18n="franchise.package1.item1">สิทธิ์ในการใช้แบรนด์ 2 ปี</li>
         <li data-i18n="franchise.package1.item2">คู่มือการดำเนินงานครบถ้วน</li>
         <li data-i18n="franchise.package1.item3">การฝึกอบรมทีมงาน 3 วัน</li>
-        <li data-i18n="franchise.package1.item4">การสนับสนุนด้านการตลาด 2 เดือน</li>
+        <li data-i18n="franchise.package1.item4">การสนับสนุนด้านการตลาด 1 เดือน</li>
       </ul>
     </div>
     
@@ -563,16 +563,16 @@
       <div class="price" data-i18n="franchise.package2.price">69,000 บาท</div>
       <ul>
         <li data-i18n="franchise.package2.item1">สิทธิ์ในการใช้แบรนด์ 3 ปี</li>
-        <li data-i18n="franchise.package2.item2">การออกแบบร้านและควบคุมการก่อสร้าง</li>
+        <li data-i18n="franchise.package2.item2">การออกแบบร้านและติดตั้งรถเข็น</li>
         <li data-i18n="franchise.package2.item3">การฝึกอบรมทีมงาน 1 สัปดาห์ </li>
-        <li data-i18n="franchise.package2.item4">การสนับสนุนด้านการตลาด 4 เดือน</li>
+        <li data-i18n="franchise.package2.item4">การสนับสนุนด้านการตลาด 3 เดือน</li>
         <li data-i18n="franchise.package2.item5">ระบบซอฟต์แวร์จัดการร้าน</li>
       </ul>
     </div>
     
     <div class="package">
       <h3 data-i18n="franchise.package3.name">พรีเมียม</h3>
-      <div class="price" data-i18n="franchise.package3.price"> 89,000 บาท</div>
+      <div class="price" data-i18n="franchise.package3.price"> 159,000 บาท</div>
       <ul>
         <li data-i18n="franchise.package3.item1">สิทธิ์ในการใช้แบรนด์ 5 ปี</li>
         <li data-i18n="franchise.package3.item2">การออกแบบร้านพรีเมียมและควบคุมการก่อสร้าง</li>
