--- a/index.html
+++ b/index.html
@@ -727,19 +727,28 @@
 // ... (โค้ด JavaScript ยังคงเดิม) ...
 const translations = {
   th: {
-    "menu.home": "หน้าแรก", "menu.about": "เกี่ยวกับเรา", "menu.franchise": "แฟรนไชส์", "menu.menu": "เมนู", "menu.gallery": "แกลเลอรี่", "menu.contact": "ติดต่อ",
-    "hero.eyebrow": "ครัวหลวง — รสชาติไทยต้นตำรับ", "hero.title": "Royal Thai Taste", "hero.desc": "ประสบการณ์อาหารไทยชั้นเลิศ พร้อมโอกาสแฟรนไชส์ทั่วลาวและไทย", "hero.cta1": "ดูแฟรนไชส์", "hero.cta2": "นัดเยี่ยมชม",
-    "about.title": "เกี่ยวกับครัวหลวง", "about.text1": "ครัวหลวงคือแบรนด์ร้านอาหารไทยแท้ที่นำเสนอรสชาติอันเป็นเอกลักษณ์ของอาหารไทยแบบดั้งเดิม ด้วยความพิถีพิถันในการคัดสรรวัตถุดิบคุณภาพ และกรรมวิธีการปรุงที่คงไว้ซึ่งรสชาติอันเป็นต้นตำรับ", "about.text2": "เราให้ความสำคัญกับประสบการณ์การรับประทานอาหารของลูกค้า โดยผสมผสานบรรยากาศการบริการที่อบอุ่นเป็นกันเอง กับความประณีตของอาหารไทยแท้ในสไตล์ Fine Dining", "about.text3": "ปัจจุบันครัวหลวงมีสาขาในประเทศไทยและกำลังขยายโอกาสแฟรนไชส์ไปยังประเทศลาว เพื่อเผยแพร่รสชาติอาหารไทยแท้สู่สายตาชาวโลก",
-    "franchise.title": "แพ็กเกจแฟรนไชส์", "franchise.desc": "ร่วมเป็นส่วนหนึ่งของครัวหลวงกับแพ็กเกจแฟรนไชส์ที่ออกแบบมาสำหรับผู้ประกอบการทุกระดับ",
-    "franchise.package1.name": "สตาร์ทเตอร์", "franchise.package1.item1": "สิทธิ์ในการใช้แบรนด์ 3 ปี", "franchise.package1.item2": "คู่มือการดำเนินงานครบถ้วน", "franchise.package1.item3": "การฝึกอบรมทีมงาน 2 สัปดาห์", "franchise.package1.item4": "การสนับสนุนด้านการตลาด 3 เดือน",
-    "franchise.package2.name": "มาตรฐาน", "franchise.package2.item1": "สิทธิ์ในการใช้แบรนด์ 5 ปี", "franchise.package2.item2": "การออกแบบร้านและควบคุมการก่อสร้าง", "franchise.package2.item3": "การฝึกอบรมทีมงาน 1 เดือน", "franchise.package2.item4": "การสนับสนุนด้านการตลาด 6 เดือน", "franchise.package2.item5": "ระบบซอฟต์แวร์จัดการร้าน",
-    "franchise.package3.name": "พรีเมียม", "franchise.package3.item1": "สิทธิ์ในการใช้แบรนด์ 7 ปี", "franchise.package3.item2": "การออกแบบร้านพรีเมียมและควบคุมการก่อสร้าง", "franchise.package3.item3": "การฝึกอบรมทีมงาน 2 เดือน", "franchise.package3.item4": "การสนับสนุนด้านการตลาด 1 ปี", "franchise.package3.item5": "ระบบซอฟต์แวร์จัดการร้านขั้นสูง", "franchise.package3.item6": "ที่ปรึกษาด้านการดำเนินธุรกิจ 1 ปี",
-    "menu.title": "เมนูของเรา", "menu.desc": "สัมผัสรสชาติอาหารไทยแท้ที่คัดสรรมาเป็นอย่างดีจากครัวหลวง",
-    "menu.item1.name": "ต้มยำกุ้ง", "menu.item1.desc": "ต้มยำกุ้งแม่น้ำรสชาติจัดจ้าน เปรี้ยวเผ็ดร้อน", "menu.item2.name": "ผัดไทยครัวหลวง", "menu.item2.desc": "ผัดไทยสูตรต้นตำรับ กุ้งสดไข่หวาน", "menu.item3.name": "แกงเขียวหวานไก่", "menu.item3.desc": "แกงเขียวหวานไก่ใบโหระพา หอมเครื่องแกง", "menu.item4.name": "มัสมั่นเนื้อ", "menu.item4.desc": "มัสมั่นเนื้อสูตรโบราณ หวานมันหอมเครื่องเทศ",
-    "gallery.title": "แกลเลอรี่", "gallery.desc": "บรรยากาศและเมนูอาหารจากครัวหลวง",
-    "contact.title": "ติดต่อเรา", "contact.info": "ข้อมูลติดต่อ", "contact.social": "ติดตามเรา", "contact.form.title": "ส่งข้อความถึงเรา", "contact.form.name": "ชื่อ-นามสกุล", "contact.form.email": "อีเมล", "contact.form.phone": "เบอร์โทรศัพท์", "contact.form.subject": "หัวข้อ", "contact.form.message": "ข้อความ", "contact.form.submit": "ส่งข้อความ",
-    "contact.address": "123 ถนนอาหารไทย แขวงบางซื่อ เขตบางซื่อ กรุงเทพฯ 10800", "contact.phone": "02-345-6789", "contact.email": "info@krualuang.com", "contact.hours": "เปิดบริการทุกวัน 10:00 - 22:00 น."
-  },
+    "menu.home": "หน้าแรก", "menu.about": "เกี่ยวกับเรา", "menu.franchise": "แฟรนไชส์", "menu.menu": "เมนู", "menu.gallery": "แกลเลอรี่", "menu.contact": "ติดต่อ",
+    "hero.eyebrow": "ครัวหลวง — รสชาติไทยต้นตำรับ", "hero.title": "Royal Thai Taste", "hero.desc": "ประสบการณ์อาหารไทยชั้นเลิศ พร้อมโอกาสแฟรนไชส์ทั่วลาวและไทย", "hero.cta1": "ดูแฟรนไชส์", "hero.cta2": "นัดเยี่ยมชม",
+    "about.title": "เกี่ยวกับครัวหลวง", "about.text1": "ครัวหลวงคือแบรนด์ร้านอาหารไทยแท้ที่นำเสนอรสชาติอันเป็นเอกลักษณ์ของอาหารไทยแบบดั้งเดิม ด้วยความพิถีพิถันในการคัดสรรวัตถุดิบคุณภาพ และกรรมวิธีการปรุงที่คงไว้ซึ่งรสชาติอันเป็นต้นตำรับ",
+    "about.text2": "เราให้ความสำคัญกับประสบการณ์การรับประทานอาหารของลูกค้า โดยผสมผสานบรรยากาศการบริการที่อบอุ่นเป็นกันเอง กับความประณีตของอาหารไทยแท้ในสไตล์ Fine Dining",
+    "about.text3": "ปัจจุบันครัวหลวงมีสาขาในประเทศไทยและกำลังขยายโอกาสแฟรนไชส์ไปยังประเทศลาว เพื่อเผยแพร่รสชาติอาหารไทยแท้สู่สายตาชาวโลก",
+    "franchise.title": "แพ็กเกจแฟรนไชส์", "franchise.desc": "ร่วมเป็นส่วนหนึ่งของครัวหลวงกับแพ็กเกจแฟรนไชส์ที่ออกแบบมาสำหรับผู้ประกอบการทุกระดับ",
+    "franchise.package1.name": "สตาร์ทเตอร์", "franchise.package1.item1": "สิทธิ์ในการใช้แบรนด์ 3 ปี", "franchise.package1.item2": "คู่มือการดำเนินงานครบถ้วน", "franchise.package1.item3": "การฝึกอบรมทีมงาน 2 สัปดาห์", "franchise.package1.item4": "การสนับสนุนด้านการตลาด 3 เดือน",
+    "franchise.package2.name": "มาตรฐาน", "franchise.package2.item1": "สิทธิ์ในการใช้แบรนด์ 5 ปี", "franchise.package2.item2": "การออกแบบร้านและควบคุมการก่อสร้าง", "franchise.package2.item3": "การฝึกอบรมทีมงาน 1 เดือน", "franchise.package2.item4": "การสนับสนุนด้านการตลาด 6 เดือน", "franchise.package2.item5": "ระบบซอฟต์แวร์จัดการร้าน",
+    "franchise.package3.name": "พรีเมียม", "franchise.package3.item1": "สิทธิ์ในการใช้แบรนด์ 7 ปี", "franchise.package3.item2": "การออกแบบร้านพรีเมียมและควบคุมการก่อสร้าง", "franchise.package3.item3": "การฝึกอบรมทีมงาน 2 เดือน", "franchise.package3.item4": "การสนับสนุนด้านการตลาด 1 ปี", "franchise.package3.item5": "ระบบซอฟต์แวร์จัดการร้านขั้นสูง", "franchise.package3.item6": "ที่ปรึกษาด้านการดำเนินธุรกิจ 1 ปี",
+    "menu.title": "เมนูของเรา", "menu.desc": "สัมผัสรสชาติอาหารไทยแท้ที่คัดสรรมาเป็นอย่างดีจากครัวหลวง",
+    "menu.item1.name": "ต้มยำกุ้ง", "menu.item1.desc": "ต้มยำกุ้งแม่น้ำรสชาติจัดจ้าน เปรี้ยวเผ็ดร้อน",
+    "menu.item2.name": "ผัดไทยครัวหลวง", "menu.item2.desc": "ผัดไทยสูตรต้นตำรับ กุ้งสดไข่หวาน",
+    "menu.item3.name": "แกงเขียวหวานไก่", "menu.item3.desc": "แกงเขียวหวานไก่ใบโหระพา หอมเครื่องแกง",
+    "menu.item4.name": "มัสมั่นเนื้อ", "menu.item4.desc": "มัสมั่นเนื้อสูตรโบราณ หวานมันหอมเครื่องเทศ",
+    "gallery.title": "แกลเลอรี่", "gallery.desc": "บรรยากาศและเมนูอาหารจากครัวหลวง",
+    "contact.title": "ติดต่อเรา", "contact.info": "ข้อมูลติดต่อ", "contact.social": "ติดตามเรา",
+    "contact.form.title": "ส่งข้อความถึงเรา", "contact.form.name": "ชื่อ-นามสกุล", "contact.form.email": "อีเมล", "contact.form.phone": "เบอร์โทรศัพท์", "contact.form.subject": "หัวข้อ", "contact.form.message": "ข้อความ", "contact.form.submit": "ส่งข้อความ",
+    "contact.address": "123 ถนนอาหารไทย แขวงบางซื่อ เขตบางซื่อ กรุงเทพฯ 10800",
+    "contact.phone": "02-345-6789",
+    "contact.email": "info@krualuang.com",
+    "contact.hours": "เปิดบริการทุกวัน 10:00 - 22:00 น."
+  },
   en: {
     "menu.home": "Home", "menu.about": "About Us", "menu.franchise": "Franchise", "menu.menu": "Menu", "menu.gallery": "Gallery", "menu.contact": "Contact",
     "hero.eyebrow": "Krualuang — Authentic Royal Thai Taste", "hero.title": "Royal Thai Taste", "hero.desc": "Experience exquisite Thai cuisine and franchise opportunities across Laos and Thailand.", "hero.cta1": "View Franchise", "hero.cta2": "Book a Visit",
@@ -755,19 +764,23 @@ const translations = {
     "contact.address": "123 Food St., Bang Sue Sub-district, Bang Sue District, Bangkok 10800", "contact.phone": "02-345-6789", "contact.email": "info@krualuang.com", "contact.hours": "Open Daily 10:00 - 22:00"
   },
   la: {
-    "menu.home": "ໜ້າທຳອິດ", "menu.about": "ກ່ຽວກັບພວກເຮົາ", "menu.franchise": "ແຟຣນໄຊส์", "menu.menu": "ເມນູ", "menu.gallery": "ຄັງຮູບພາບ", "menu.contact": "ຕິດຕໍ່",
-    "hero.eyebrow": "ຄົວຫຼວງ — ລົດຊາດໄທແທ້", "hero.title": "Royal Thai Taste", "hero.desc": "ປະສົບການອາຫານໄທທີ່ດີທີ່ສຸດ ພ້ອມໂອກາດແຟຣນໄຊສ໌ທົ່ວລາວ ແລະ ໄທ.", "hero.cta1": "ເບິ່ງແຟຣນໄຊส์", "hero.cta2": "ນັດໝາຍເຂົ້າຊົມ",
-    "about.title": "ກ່ຽວກັບຄົວຫຼວງ", "about.text1": "ຄົວຫຼວງເປັນຮ້ານອາຫານໄທແທ້ທີ່ນຳສະເໜີລົດຊາດອັນເປັນເອກະລັກຂອງອາຫານໄທແບບດັ້ງເດີມ ດ້ວຍຄວາມເອົາໃຈໃສ່ໃນການຄັດເລືອກວັດຖຸດິບຄຸນນະພາບ ແລະ ວິທີການປຸງທີ່ຮັກສາລົດຊາດຕົ້ນຕຳຮັບ.", "about.text2": "ພວກເຮົາໃຫ້ຄວາມສຳຄັນກັບປະສົບການການຮັບປະທານອາຫານຂອງລູກຄ້າ ໂດຍປະສົມປະສານບັນຍາກາດການບໍລິການທີ່ອົບອຸ່ນເປັນກັນເອງ ກັບຄວາມປະນີດຂອງອາຫານໄທແທ້ໃນແບບ Fine Dining.", "about.text3": "ປັດຈຸບັນ ຄົວຫຼວງມີສາຂາໃນປະເທດໄທ ແລະ ກໍາລັງຂະຫຍາຍໂອກາດແຟຣນໄຊສ໌ໄປຍັງປະເທດລາວ ເພື່ອເຜີຍແຜ່ລົດຊາດອາຫານໄທແທ້ສູ່ສາຍຕາຊາວໂລກ.",
-    "franchise.title": "ຊຸດແພັກເກດແຟຣນໄຊส์", "franchise.desc": "ຮ່ວມເປັນສ່ວນໜຶ່ງຂອງຄົວຫຼວງກັບຊຸດແພັກເກດແຟຣນໄຊส์ທີ່ອອກແບບມາສຳລັບຜູ້ປະກອບການທຸກລະດັບ.",
-    "franchise.package1.name": "ເລີ່ມຕົ້ນ", "franchise.package1.item1": "ສິດທິໃນການໃຊ້ຊື່ 3 ປີ", "franchise.package1.item2": "ຄູ່ມືການດໍາເນີນງານຄົບຖ້ວນ", "franchise.package1.item3": "ການຝຶກອົບຮົມທີມງານ 2 ອາທິດ", "franchise.package1.item4": "ການສະໜັບສະໜູນດ້ານການຕະຫຼາດ 3 ເດືອນ",
-    "franchise.package2.name": "ມາດຕະຖານ", "franchise.package2.item1": "ສິດທິໃນການໃຊ້ຊື່ 5 ປີ", "franchise.package2.item2": "ການອອກແບບຮ້ານ ແລະ ຄວບຄຸມການກໍ່ສ້າງ", "franchise.package2.item3": "ການຝຶກອົບຮົມທີມງານ 1 ເດືອນ", "franchise.package2.item4": "ການສະໜັບສະໜູນດ້ານການຕະຫຼາດ 6 ເດືອນ", "franchise.package2.item5": "ລະບົບຊອບແວร์ຈັດການຮ້ານ",
-    "franchise.package3.name": "ພຣີມຽມ", "franchise.package3.item1": "ສິດທິໃນການໃຊ້ຊື່ 7 ປີ", "franchise.package3.item2": "ການອອກແບບຮ້ານພຣີມຽມ ແລະ ຄວບຄຸມການກໍ່ສ້າງ", "franchise.package3.item3": "ການຝຶກອົບຮົມທີມງານ 2 ເດືອນ", "franchise.package3.item4": "ການສະໜັບສະໜູນດ້ານການຕະຫຼາດ 1 ປີ", "franchise.package3.item5": "ລະບົບຊອບແວร์ຈັດການຮ້ານຂັ້ນສູງ", "franchise.package3.item6": "ທີ່ປຶກສາດ້ານການດໍາເນີນທຸລະກິດ 1 ປີ",
-    "menu.title": "ເມນູຂອງພວກເຮົາ", "menu.desc": "ສຳຜັດລົດຊາດອາຫານໄທແທ້ທີ່ຄັດສັນມາຢ່າງດີຈາກຄົວຫຼວງ",
-    "menu.item1.name": "ຕ້ມຍຳກຸ້ງ", "menu.item1.desc": "ຕ້ມຍຳກຸ້ງແມ່ນ້ຳລົດຊາດຈັດຈ້ານ ຫວານສົ້ມເຜັດຮ້ອນ", "menu.item2.name": "ຜັດໄທຄົວຫຼວງ", "menu.item2.desc": "ຜັດໄທສູດຕົ້ນຕຳຮັບ ກຸ້ງສົດໃສ່ໄຂ່ຫວານ", "menu.item3.name": "ແກງຂຽວຫວານໃສ່ໄກ່", "menu.item3.desc": "ແກງຂຽວຫວານໃສ່ໃບໂຫລະພາ ຫອມເຄື່ອງແກງ", "menu.item4.name": "ມັດສະມັ້ນຊີ້ນ", "menu.item4.desc": "ມັດສະມັ້ນຊີ້ນສູດໂບຮານ ຫວານມັນຫອມເຄື່ອງເທດ",
-    "gallery.title": "ຄັງຮູບພາບ", "gallery.desc": "ບັນຍາກາດ ແລະ ເມນູອາຫານຈາກຄົວຫຼວງ",
-    "contact.title": "ຕິດຕໍ່ພວກເຮົາ", "contact.info": "ຂໍ້ມູນຕິດຕໍ່", "contact.social": "ຕິດຕາມພວກເຮົາ", "contact.form.title": "ສົ່ງຂໍ້ຄວາມຫາພວກເຮົາ", "contact.form.name": "ຊື່-ນາມສະກຸນ", "contact.form.email": "ອີເມວ", "contact.form.phone": "ເບີໂທລະສັບ", "contact.form.subject": "ຫົວຂໍ້", "contact.form.message": "ຂໍ້ຄວາມ", "contact.form.submit": "ສົ່ງຂໍ້ຄວາມ",
-    "contact.address": "123 ຖະໜົນອາຫານໄທ, ບາງຊື່, ບາງຊື່, ບາງກອກ 10800", "contact.phone": "02-345-6789", "contact.email": "info@krualuang.com", "contact.hours": "ເປີດບໍລິການທຸກມື້ 10:00 - 22:00"
-  },
+    "menu.home": "ໜ້າຫຼັກ", "menu.about": "ກ່ຽວກັບພວກເຮົາ", "menu.franchise": "ແຟຣນໄຊສ໌", "menu.menu": "ເມນູ", "menu.gallery": "ຮູບພາບ", "menu.contact": "ຕິດຕໍ່",
+    "hero.eyebrow": "ຄົວຫຼວງ — ລົດຊາດໄທແທ້ຕົ້ນສະບັບ", "hero.title": "ລົດຊາດໄທທີ່ແທ້ຈິງ", "hero.desc": "ປະສົບການອາຫານໄທຊັ້ນດີ ພ້ອມໂອກາດແຟຣນໄຊສ໌ທົ່ວລາວແລະໄທ", "hero.cta1": "ເບິ່ງແຟຣນໄຊສ໌", "hero.cta2": "ນັດຢ້ຽມຊົມ",
+    "about.title": "ກ່ຽວກັບຄົວຫຼວງ", "about.text1": "ຄົວຫຼວງແມ່ນແບຣນຮ້ານອາຫານໄທແທ້ທີ່ນຳສະເຫນີລົດຊາດດັ້ງເດີມຂອງອາຫານໄທຢ່າງມີເອກະລັກ ດ້ວຍການເລືອກວັດຖຸດິບທີ່ມີຄຸນນະພາບແລະການປຸງແຕ່ງຢ່າງປະນີດ.",
+    "about.text2": "ພວກເຮົາໃຫ້ຄວາມສຳຄັນກັບປະສົບການຂອງລູກຄ້າ ໂດຍຜະສົມປະສານການບໍລິການທີ່ອົບອຸ່ນກັບອາຫານໄທແທ້ແບບ Fine Dining.",
+    "about.text3": "ປັດຈຸບັນ ຄົວຫຼວງມີສາຂາໃນໄທແລະກຳລັງຂະຫຍາຍໄປສູ່ລາວ ເພື່ອເຮັດໃຫ້ໂລກຮູ້ຈັກລົດຊາດໄທແທ້.",
+    "franchise.title": "ແພັກແກຈແຟຣນໄຊສ໌", "franchise.desc": "ຮ່ວມເປັນສ່ວນໜຶ່ງກັບຄົວຫຼວງ ດ້ວຍແພັກແກຈທີ່ເຫມາະກັບຜູ້ປະກອບການທຸກລະດັບ.",
+    "franchise.package1.name": "ສະຕາຣ໌ເຕີ", "franchise.package1.item1": "ສິດໃນການໃຊ້ແບຣນ 3 ປີ", "franchise.package1.item2": "ຄູ່ມືການດຳເນີນງານຄົບຖ້ວນ", "franchise.package1.item3": "ຝຶກອົບຮົມທີມງານ 2 ອາທິດ", "franchise.package1.item4": "ສະໜັບສະໜູນການຕະຫຼາດ 3 ເດືອນ",
+    "franchise.package2.name": "ມາດຕະຖານ", "franchise.package2.item1": "ສິດໃນການໃຊ້ແບຣນ 5 ປີ", "franchise.package2.item2": "ອອກແບບແລະຄວບຄຸມການກໍ່ສ້າງ", "franchise.package2.item3": "ຝຶກອົບຮົມ 1 ເດືອນ", "franchise.package2.item4": "ສະໜັບສະໜູນການຕະຫຼາດ 6 ເດືອນ", "franchise.package2.item5": "ລະບົບຈັດການຮ້ານ",
+    "franchise.package3.name": "ພຣີເມຍມ", "franchise.package3.item1": "ສິດໃນການໃຊ້ແບຣນ 7 ປີ", "franchise.package3.item2": "ອອກແບບຮ້ານພຣີເມຍມ", "franchise.package3.item3": "ຝຶກອົບຮົມ 2 ເດືອນ", "franchise.package3.item4": "ສະໜັບສະໜູນການຕະຫຼາດ 1 ປີ", "franchise.package3.item5": "ລະບົບຈັດການຮ້ານຂັ້ນສູງ", "franchise.package3.item6": "ທີ່ປຶກສາທຸລະກິດ 1 ປີ",
+    "menu.title": "ເມນູຂອງພວກເຮົາ", "menu.desc": "ສຳຜັດລົດຊາດອາຫານໄທແທ້ທີ່ຄັດສັນຢ່າງປະນີດ.",
+    "menu.item1.name": "ຕົ້ມຢຳກຸ້ງ", "menu.item1.desc": "ຕົ້ມຢຳກຸ້ງນ້ຳໃສລົດເຜັດປຽວກຳລັງດີ",
+    "menu.item2.name": "ຜັດໄທຄົວຫຼວງ", "menu.item2.desc": "ຜັດໄທສູດດັ້ງເດີມ ກຸ້ງສົດ ໄຂ່ຫວານ",
+    "menu.item3.name": "ແກງຂຽວຫວານໄກ່", "menu.item3.desc": "ແກງຂຽວຫວານໄກ່ ໃສ່ໃບໂຫຣະພາ ຫອມກະທິ",
+    "menu.item4.name": "ແກງມັດສະມັນເນື້ອ", "menu.item4.desc": "ແກງມັດສະມັນເນື້ອສູດໂບຣານ ຫວານມັນຫອມເຄື່ອງເທດ",
+    "gallery.title": "ຮູບພາບ", "gallery.desc": "ບັນຍາກາດແລະອາຫານຈາກຄົວຫຼວງ",
+    "contact.title": "ຕິດຕໍ່ພວກເຮົາ", "contact.info": "ຂໍ້ມູນຕິດຕໍ່", "contact.social": "ຕິດຕາມພວກເຮົາ",
+    "contact.form.title": "ສົ່ງຂໍ້ຄວາມ", "contact.form.name": "ຊື່-ນາມສະກຸນ", "contact.form.email": "ອີເມວ", "contact.form.phone": "ເບີໂທ", "contact.form.subject": "ຫົ
   zh: {
     "menu.home": "首页", "menu.about": "关于我们", "menu.franchise": "特许经营", "menu.menu": "菜单", "menu.gallery": "图库", "menu.contact": "联系我们",
     "hero.eyebrow": "Krualuang — 正宗泰皇御膳风味", "hero.title": "Royal Thai Taste", "hero.desc": "体验精致泰国美食，把握遍布老挝和泰国的特许经营机会。", "hero.cta1": "查看特许经营", "hero.cta2": "预约参观",
