--- a/index.html
+++ b/index.html
@@ -720,29 +720,30 @@ const translations = {
     "about.text1": "ครัวหลวงคือแบรนด์ร้านอาหารไทยแท้ที่นำเสนอรสชาติอันเป็นเอกลักษณ์ของอาหารไทยแบบดั้งเดิม ด้วยความพิถีพิถันในการคัดสรรวัตถุดิบคุณภาพ และกรรมวิธีการปรุงที่คงไว้ซึ่งรสชาติอันเป็นต้นตำรับ",
     "about.text2": "เราให้ความสำคัญกับประสบการณ์การรับประทานอาหารของลูกค้า โดยผสมผสานบรรยากาศการบริการที่อบอุ่นเป็นกันเอง กับความประณีตของอาหารไทยแท้ในสไตล์ Fine Dining",
     "about.text3": "ปัจจุบันครัวหลวงมีสาขาในประเทศไทยและกำลังขยายโอกาสแฟรนไชส์ไปยังประเทศลาว เพื่อเผยแพร่รสชาติอาหารไทยแท้สู่สายตาชาวโลก",
-    "franchise.title": "แพ็กเกจแฟรนไชส์",
-    "franchise.desc": "ร่วมเป็นส่วนหนึ่งของครัวหลวงกับแพ็กเกจแฟรนไชส์ที่ออกแบบมาสำหรับผู้ประกอบการทุกระดับ",
-    "franchise.package1.name": "สตาร์ทเตอร์",
-    "franchise.package1.price": "1.2 ล้านบาท",
-    "franchise.package1.item1": "สิทธิ์ในการใช้แบรนด์ 3 ปี",
-    "franchise.package1.item2": "คู่มือการดำเนินงานครบถ้วน",
-    "franchise.package1.item3": "การฝึกอบรมทีมงาน 2 สัปดาห์",
-    "franchise.package1.item4": "การสนับสนุนด้านการตลาด 3 เดือน",
-    "franchise.package2.name": "มาตรฐาน",
-    "franchise.package2.price": "2.5 ล้านบาท",
-    "franchise.package2.item1": "สิทธิ์ในการใช้แบรนด์ 5 ปี",
-    "franchise.package2.item2": "การออกแบบร้านและควบคุมการก่อสร้าง",
-    "franchise.package2.item3": "การฝึกอบรมทีมงาน 1 เดือน",
-    "franchise.package2.item4": "การสนับสนุนด้านการตลาด 6 เดือน",
-    "franchise.package2.item5": "ระบบซอฟต์แวร์จัดการร้าน",
-    "franchise.package3.name": "พรีเมียม",
-    "franchise.package3.price": "4 ล้านบาท",
-    "franchise.package3.item1": "สิทธิ์ในการใช้แบรนด์ 7 ปี",
-    "franchise.package3.item2": "การออกแบบร้านพรีเมียมและควบคุมการก่อสร้าง",
-    "franchise.package3.item3": "การฝึกอบรมทีมงาน 2 เดือน",
-    "franchise.package3.item4": "การสนับสนุนด้านการตลาด 1 ปี",
-    "franchise.package3.item5": "ระบบซอฟต์แวร์จัดการร้านขั้นสูง",
-    "franchise.package3.item6": "ที่ปรึกษาด้านการดำเนินธุรกิจ 1 ปี",
+"franchise.package1.name": "สตาร์ทเตอร์",
+"franchise.package1.price": "39,000 บาท",
+"franchise.package1.item1": "สิทธิ์ในการใช้แบรนด์ 2 ปี",
+"franchise.package1.item2": "คู่มือการดำเนินงานครบถ้วน",
+"franchise.package1.item3": "การฝึกอบรมทีมงาน 1 สัปดาห์",
+"franchise.package1.item4": "การสนับสนุนด้านการตลาด 1 เดือน",
+
+"franchise.package2.name": "มาตรฐาน",
+"franchise.package2.price": "69,000 บาท",
+"franchise.package2.item1": "สิทธิ์ในการใช้แบรนด์ 3 ปี",
+"franchise.package2.item2": "ติดตั้งรถ",
+"franchise.package2.item3": "การฝึกอบรมทีมงาน 2 สัปดาห์",
+"franchise.package2.item4": "การสนับสนุนด้านการตลาด 3 เดือน",
+"franchise.package2.item5": "ระบบซอฟต์แวร์จัดการร้าน",
+
+"franchise.package3.name": "พรีเมียม",
+"franchise.package3.price": "89,000 บาท",
+"franchise.package3.item1": "สิทธิ์ในการใช้แบรนด์ 5 ปี",
+"franchise.package3.item2": "การออกแบบร้านพรีเมียมและควบคุมการก่อสร้าง",
+"franchise.package3.item3": "การฝึกอบรมทีมงาน 3 สัปดาห์",
+"franchise.package3.item4": "การสนับสนุนด้านการตลาด 5 เดือน",
+"franchise.package3.item5": "ระบบซอฟต์แวร์จัดการร้านขั้นสูง",
+"franchise.package3.item6": "ที่ปรึกษาด้านการดำเนินธุรกิจ 6 เดือน",
+
     "menu.title": "เมนูของเรา",
     "menu.desc": "สัมผัสรสชาติอาหารไทยแท้ที่คัดสรรมาเป็นอย่างดีจากครัวหลวง",
     "menu.item1.name": "ต้มยำกุ้ง",
