--- a/index.html
+++ b/index.html
@@ -664,7 +664,8 @@
       <div class="contact-details">
         <div>
           <i class="fas fa-map-marker-alt"></i>
-          <span data-i18n="contact.address">123 ถนนอาหารไทย แขวงบางซื่อ เขตบางซื่อ กรุงเทพฯ 10800</span>
+          <span data-i18n="contact.address">KRUA LUANG - Royal Thai Cuisine Vientiane (ຄົວຫຼວງ)
+Ban Thôngkang Hom 10, No 395, Sisatanak District, Vientiane, Laos 01000</span>
         </div>
         <div>
           <i class="fas fa-phone"></i>
