--- a/index.html
+++ b/index.html
@@ -787,25 +787,27 @@ const translations = {
     "contact.phone": "+856 20 566 05450", 
     "contact.email": "krualuanglao@gmail.com", 
     "contact.hours": "ເປີດບໍລິການທຸກມື້ 10:00 - 22:00"
+  // ... โค้ดภาษาอื่นๆ
   },
   zh: {
     "menu.home": "首页", "menu.about": "关于我们", "menu.franchise": "特许经营", "menu.menu": "菜单", "menu.gallery": "图库", "menu.contact": "联系我们",
     "hero.eyebrow": "Krualuang — 正宗泰皇御膳风味", "hero.title": "Royal Thai Taste", "hero.desc": "体验精致泰国美食，把握遍布老挝和泰国的特许经营机会。", "hero.cta1": "查看特许经营", "hero.cta2": "预约参观",
-    "about.title": "关于Krualuang", "about.text1": "Krualuang是一个正宗泰国餐厅品牌，提供独特传统的泰国风味，采用高品质原料精心烹制。", "about.text2": "我们注重客户的用餐体验，将热情友好的服务与精致的泰式美食相结合，打造出高档用餐体验。", "about.text3": "Krualuang目前在泰国设有分店，并正将特许经营机会扩展到老挝，向世界展示正宗泰国美食。",
-    "franchise.title": "特许经营方案", "franchise.desc": "加入Krualuang，利用专为各类企业家设计的特许经营方案。",
-    "franchise.package1.name": "入门级", "franchise.package1.price": "120 万泰铢", "franchise.package1.item1": "3年品牌使用权", "franchise.package1.item2": "完整运营手册", "franchise.package1.item3": "2周团队培训", "franchise.package1.item4": "3个月市场支持",
-    "franchise.package2.name": "标准级", "franchise.package2.price": "250 万泰铢", "franchise.package2.item1": "5年品牌使用权", "franchise.package2.item2": "店铺设计与施工监督", "franchise.package2.item3": "1个月团队培训", "franchise.package2.item4": "6个月市场支持", "franchise.package2.item5": "销售点(POS)系统",
-    "franchise.package3.name": "豪华级", "franchise.package3.price": "400 万泰铢", "franchise.package3.item1": "7年品牌使用权", "franchise.package3.item2": "豪华店铺设计与监督", "franchise.package3.item3": "2个月团队培训", "franchise.package3.item4": "1年市场支持", "franchise.package3.item5": "高级销售点(POS)系统", "franchise.package3.item6": "1年业务顾问",
-    "menu.title": "我们的菜单", "menu.desc": "Experience authentic Thai tastes carefully selected from the Krualuang kitchen.",
-    "menu.item1.name": "冬阴功汤", "menu.item1.desc": "酸辣浓郁的河虾冬阴功汤", "menu.item1.price": "220 泰铢", "menu.item2.name": "Krualuang泰式炒河粉", "menu.item2.desc": "正宗泰式炒河粉配新鲜大虾甜蛋", "menu.item2.price": "180 泰铢", "menu.item3.name": "泰式绿咖喱鸡", "menu.item3.desc": "香草味浓郁的泰式绿咖喱鸡", "menu.item3.price": "190 泰铢", "menu.item4.name": "泰式马萨曼咖喱牛腩", "menu.item4.desc": "传统马萨曼咖喱，香料浓郁甜美", "menu.item4.price": "250 泰铢",
-    "gallery.title": "图库", "gallery.desc": "Krualuang的环境和招牌菜肴",
-    "contact.title": "联系我们", "contact.info": "联系信息", "contact.social": "关注我们", "contact.form.title": "给我们留言", "contact.form.name": "姓名", "contact.form.email": "电子邮件", "contact.form.phone": "电话", "contact.form.subject": "主题", "contact.form.message": "信息", "contact.form.submit": "发送信息",
-    "contact.address": "Ban Thongkang Hom 10, No 395, Sisatanak District, Vientiane, Laos 01000", 
-    "contact.phone": "+856 20 566 05450", 
-    "contact.email": "krualuanglao@gmail.com", 
-    "contact.hours": "每日营业 10:00 - 22:00"
-  }
+    "about.title": "关于Krualuang", "about.text1": "Krualuang是一个正宗泰国餐厅品牌，提供独特传统的泰国风味，采用高品质原料精心烹制。", "about.text2": "我们注重客户的用餐体验，将热情友好的服务与精致的泰式美食风格融为一体，提供绝佳的用餐体验。", "about.text3": "Krualuang目前在泰国设有分店，并正在老挝扩展特许经营机会，以向全球传播正宗的泰式风味。",
+    "franchise.title": "特许经营套餐", "franchise.desc": "加入Krualuang，我们为各种水平的企业家量身定制了特许经营套餐。",
+    "franchise.package1.name": "入门型", "franchise.package1.price": "120 万泰铢", "franchise.package1.item1": "3年品牌授权", "franchise.package1.item2": "完整运营手册", "franchise.package1.item3": "2周团队培训", "franchise.package1.item4": "3个月营销支持",
+    "franchise.package2.name": "标准型", "franchise.package2.price": "250 万泰铢", "franchise.package2.item1": "5年品牌授权", "franchise.package2.item2": "店面设计及施工监督", "franchise.package2.item3": "1个月团队培训", "franchise.package2.item4": "6个月营销支持", "franchise.package2.item5": "商店管理软件系统",
+    "franchise.package3.name": "尊享型", "franchise.package3.price": "400 万泰铢", "franchise.package3.item1": "7年品牌授权", "franchise.package3.item2": "高级店面设计及施工监督", "franchise.package3.item3": "2个月团队培训", "franchise.package3.item4": "1年营销支持", "franchise.package3.item5": "高级商店管理软件系统", "franchise.package3.item6": "1年业务运营顾问",
+    "menu.title": "我们的菜单", "menu.desc": "品尝由Krualuang精心挑选的正宗泰式风味。",
+    "menu.item1.name": "冬阴功汤", "menu.item1.desc": "酸辣浓郁的河虾冬阴功汤。", "menu.item1.price": "220 泰铢", "menu.item2.name": "Krualuang 泰式炒面", "menu.item2.desc": "正宗泰式炒面，配有鲜虾和甜蛋。", "menu.item2.price": "180 泰铢", "menu.item3.name": "泰式绿咖喱鸡", "menu.item3.desc": "散发着罗勒香气的绿咖喱鸡。", "menu.item3.price": "190 泰铢", "menu.item4.name": "马萨曼咖喱牛肉", "menu.item4.desc": "古法马萨曼咖喱牛肉，甜美浓郁，香料芬芳。", "menu.item4.price": "250 泰铢",
+    "gallery.title": "图库", "gallery.desc": "Krualuang的店面氛围和特色菜单。",
+    "contact.title": "联系我们", "contact.info": "联系信息", "contact.social": "关注我们", "contact.form.title": "给我们留言", "contact.form.name": "姓名", "contact.form.email": "电子邮件", "contact.form.phone": "电话号码", "contact.form.subject": "主题", "contact.form.message": "留言", "contact.form.submit": "发送留言",
+    "contact.address": "老挝万象西萨塔纳克区 Thongkang Hom 10 街 395 号 01000",
+    "contact.phone": "+856 20 566 05450", 
+    "contact.email": "krualuanglao@gmail.com", 
+    "contact.hours": "每天开放 10:00 - 22:00"
+  } // <<<<<< ต้องปิด Object zh ด้วยวงเล็บปีกกานี้
 };
+// ... โค้ด JavaScript ที่เหลือ
 
 let currentLang = 'th'; // ตั้งค่าภาษาเริ่มต้นเป็นไทย
 
