--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@ const translations = {
     "menu.item1.name": "ต้มยำกุ้ง", "menu.item1.desc": "ต้มยำกุ้งแม่น้ำรสชาติจัดจ้าน เปรี้ยวเผ็ดร้อน", "menu.item2.name": "ผัดไทยครัวหลวง", "menu.item2.desc": "ผัดไทยสูตรต้นตำรับ กุ้งสดไข่หวาน", "menu.item3.name": "แกงเขียวหวานไก่", "menu.item3.desc": "แกงเขียวหวานไก่ใบโหระพา หอมเครื่องแกง", "menu.item4.name": "มัสมั่นเนื้อ", "menu.item4.desc": "มัสมั่นเนื้อสูตรโบราณ หวานมันหอมเครื่องเทศ",
     "gallery.title": "แกลเลอรี่", "gallery.desc": "บรรยากาศและเมนูอาหารจากครัวหลวง",
     "contact.title": "ติดต่อเรา", "contact.info": "ข้อมูลติดต่อ", "contact.social": "ติดตามเรา", "contact.form.title": "ส่งข้อความถึงเรา", "contact.form.name": "ชื่อ-นามสกุล", "contact.form.email": "อีเมล", "contact.form.phone": "เบอร์โทรศัพท์", "contact.form.subject": "หัวข้อ", "contact.form.message": "ข้อความ", "contact.form.submit": "ส่งข้อความ",
-    "contact.address": "123 ถนนอาหารไทย แขวงบางซื่อ เขตบางซื่อ กรุงเทพฯ 10800", "contact.phone": "02-345-6789", "contact.email": "info@krualuang.com", "contact.hours": "เปิดบริการทุกวัน 10:00 - 22:00 น."
+    "contact.address": "บ้านทงกาง ซอย 10, เลขที่ 395, เขตศรีสัตตนาค, นครหลวงเวียงจันทน์, ลาว 01000", "contact.phone": "20 566 05450", "contact.email": "krualuanglao@gmail.com", "contact.hours": "เปิดบริการทุกวัน 10:00 - 22:00 น."
   },
   en: {
     "menu.home": "Home", "menu.about": "About Us", "menu.franchise": "Franchise", "menu.menu": "Menu", "menu.gallery": "Gallery", "menu.contact": "Contact",
@@ -754,7 +754,7 @@ const translations = {
     "menu.item1.name": "Tom Yum Goong", "menu.item1.desc": "Zesty and intensely sour-spicy river prawn soup.", "menu.item2.name": "Krualuang Pad Thai", "menu.item2.desc": "Authentic Pad Thai with fresh shrimp and sweet egg.", "menu.item3.name": "Green Curry with Chicken", "menu.item3.desc": "Aromatic green curry with holy basil.", "menu.item4.name": "Massaman Beef", "menu.item4.desc": "Traditional Massaman curry with rich, fragrant spices.",
     "gallery.title": "Gallery", "gallery.desc": "Ambiance and signature dishes from Krualuang.",
     "contact.title": "Contact Us", "contact.info": "Contact Information", "contact.social": "Follow Us", "contact.form.title": "Send Us a Message", "contact.form.name": "Name", "contact.form.email": "Email", "contact.form.phone": "Phone", "contact.form.subject": "Subject", "contact.form.message": "Message", "contact.form.submit": "Send Message",
-    "contact.address": "123 Food St., Bang Sue Sub-district, Bang Sue District, Bangkok 10800", "contact.phone": "02-345-6789", "contact.email": "info@krualuang.com", "contact.hours": "Open Daily 10:00 - 22:00"
+    "contact.address": "Ban Tongkang, Soi 10, No. 395, Sisattanak District, Vientiane Capital, Laos 01000", "contact.phone": "20 566 05450", "contact.email": "krualuanglao@gmail.com", "contact.hours": "Open Daily 10:00 - 22:00"
   },
   la: {
     "menu.home": "ໜ້າທຳອິດ", "menu.about": "ກ່ຽວກັບພວກເຮົາ", "menu.franchise": "ແຟຣນໄຊส์", "menu.menu": "ເມນູ", "menu.gallery": "ຄັງຮູບພາບ", "menu.contact": "ຕິດຕໍ່",
@@ -768,7 +768,7 @@ const translations = {
     "menu.item1.name": "ຕ້ມຍຳກຸ້ງ", "menu.item1.desc": "ຕ້ມຍຳກຸ້ງແມ່ນ້ຳລົດຊາດຈັດຈ້ານ ຫວານສົ້ມເຜັດຮ້ອນ", "menu.item2.name": "ຜັດໄທຄົວຫຼວງ", "menu.item2.desc": "ຜັດໄທສູດຕົ້ນຕຳຮັບ ກຸ້ງສົດໃສ່ໄຂ່ຫວານ", "menu.item3.name": "ແກງຂຽວຫວານໃສ່ໄກ່", "menu.item3.desc": "ແກງຂຽວຫວານໃສ່ໃບໂຫລະພາ ຫອມເຄື່ອງແກງ", "menu.item4.name": "ມັດສະມັ້ນຊີ້ນ", "menu.item4.desc": "ມັດສະມັ້ນຊີ້ນສູດໂບຮານ ຫວານມັນຫອມເຄື່ອງເທດ",
     "gallery.title": "ຄັງຮູບພາບ", "gallery.desc": "ບັນຍາກາດ ແລະ ເມນູອາຫານຈາກຄົວຫຼວງ",
     "contact.title": "ຕິດຕໍ່ພວກເຮົາ", "contact.info": "ຂໍ້ມູນຕິດຕໍ່", "contact.social": "ຕິດຕາມພວກເຮົາ", "contact.form.title": "ສົ່ງຂໍ້ຄວາມຫາພວກເຮົາ", "contact.form.name": "ຊື່-ນາມສະກຸນ", "contact.form.email": "ອີເມວ", "contact.form.phone": "ເບີໂທລະສັບ", "contact.form.subject": "ຫົວຂໍ້", "contact.form.message": "ຂໍ້ຄວາມ", "contact.form.submit": "ສົ່ງຂໍ້ຄວາມ",
-    "contact.address": "123 ຖະໜົນອາຫານໄທ, ບາງຊື່, ບາງຊື່, ບາງກອກ 10800", "contact.phone": "02-345-6789", "contact.email": "info@krualuang.com", "contact.hours": "ເປີດບໍລິການທຸກມື້ 10:00 - 22:00"
+    "contact.address": "ບ້ານ ທົ່ງກາງ, ຊອຍ 10, ເລກທີ 395, ເມືອງ ສີສັດຕະນາກ, ນະຄອນຫຼວງວຽງຈັນ, ລາວ 01000", "contact.phone": "20 566 05450", "contact.email": "krualuanglao@gmail.com", "contact.hours": "ເປີດບໍລິການທຸກມື້ 10:00 - 22:00"
   },
   zh: {
     "menu.home": "首页", "menu.about": "关于我们", "menu.franchise": "特许经营", "menu.menu": "菜单", "menu.gallery": "图库", "menu.contact": "联系我们",
@@ -782,7 +782,7 @@ const translations = {
     "menu.item1.name": "冬阴功汤", "menu.item1.desc": "酸辣浓郁的河虾冬阴功汤", "menu.item2.name": "Krualuang泰式炒河粉", "menu.item2.desc": "正宗泰式炒河粉配新鲜大虾甜蛋", "menu.item3.name": "泰式绿咖喱鸡", "menu.item3.desc": "香草味浓郁的泰式绿咖喱鸡", "menu.item4.name": "泰式马萨曼咖喱牛腩", "menu.item4.desc": "传统马萨曼咖喱，香料浓郁甜美",
     "gallery.title": "图库", "gallery.desc": "Krualuang的环境和招牌菜肴",
     "contact.title": "联系我们", "contact.info": "联系信息", "contact.social": "关注我们", "contact.form.title": "给我们留言", "contact.form.name": "姓名", "contact.form.email": "电子邮件", "contact.form.phone": "电话", "contact.form.subject": "主题", "contact.form.message": "信息", "contact.form.submit": "发送信息",
-    "contact.address": "曼谷 10800, Bang Sue区, Bang Sue分区, 123 Food St.", "contact.phone": "02-345-6789", "contact.email": "info@krualuang.com", "contact.hours": "每日营业 10:00 - 22:00"
+    "contact.address": "Ban Tongkang, Soi 10, No. 395, Sisattanak District, Vientiane Capital, Laos 01000", "contact.phone": "20 566 05450", "contact.email": "krualuanglao@gmail.com", "contact.hours": "每日营业 10:00 - 22:00"
   }
 };
 function setLanguage(lang) {
