--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
     
     <div class="package">
       <h3 data-i18n="franchise.package2.name">มาตรฐาน</h3>
-      <div class="price" data-i18n="franchise.package2.price">69,000 ล้านบาท</div>
+      <div class="price" data-i18n="franchise.package2.price">69,000 บาท</div>
       <ul>
         <li data-i18n="franchise.package2.item1">สิทธิ์ในการใช้แบรนด์ 3 ปี</li>
         <li data-i18n="franchise.package2.item2">งานติดตั้งร้านค้า</li>
