--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 <section id="home" class="hero">
   <div class="hero-content">
     <h4 data-i18n="hero.eyebrow">ครัวหลวง — รสชาติไทยต้นตำรับ</h4>
-    <h1 data-i18n="hero.title">Royal Thai Taste</h1>
+    <h1 data-i18n="hero.title">KRUA LUANG ROYAL THAI CUSINE</h1>
     <p data-i18n="hero.desc">ประสบการณ์อาหารไทยชั้นเลิศ พร้อมโอกาสแฟรนไชส์ทั่วลาวและไทย</p>
     <div class="hero-buttons">
       <a href="#franchise" data-i18n="hero.cta1">ดูแฟรนไชส์</a>
